@@ -96,7 +96,7 @@ public class VariablesMap {
     public List<String> getSubGroupNames() {
         return groups.keySet()
                 .stream().filter(name -> ! groups.get(name).isRoot())
-                .collect(Collectors.toList());
+                .toList();
     }
     
     /** Return the number of groups in the map (including the root group). */
@@ -197,15 +197,15 @@ public class VariablesMap {
     public boolean isInQuestionGrid(String questionName){
         return variables.values().stream()
                 .filter(Variable::isInQuestionGrid)
-                .anyMatch(var -> // (FILTER_RESULT variables are upper case)
-                        (var.getQuestionItemName().equals(questionName)
-                                || var.getQuestionItemName().equalsIgnoreCase(questionName)));
+                .anyMatch(varInQuestionGrid -> // (FILTER_RESULT variables are upper case)
+                        (varInQuestionGrid.getQuestionItemName().equals(questionName)
+                                || varInQuestionGrid.getQuestionItemName().equalsIgnoreCase(questionName)));
     }
 
     public Group getQuestionGridGroup(String questionName) {
         return variables.values().stream()
                 .filter(Variable::isInQuestionGrid)
-                .filter(var -> var.getQuestionItemName().equals(questionName))
+                .filter(varInQuestionGrid -> varInQuestionGrid.getQuestionItemName().equals(questionName))
                 .map(Variable::getGroup)
                 .findFirst().orElse(null);
     }
@@ -223,7 +223,7 @@ public class VariablesMap {
 	public boolean hasUcqMcq(String variableName) {
         Variable variable = variables.get(variableName);
         if (variable != null) {
-            return variable instanceof UcqVariable && !((UcqVariable) variable).getQuestionItemName().isEmpty();
+            return variable instanceof UcqVariable ucqVariable && !ucqVariable.getQuestionItemName().isEmpty();
         }
         return false;
     }
@@ -232,7 +232,7 @@ public class VariablesMap {
         return variables.values().stream()
                 .filter(UcqVariable.class::isInstance)
                 .map(UcqVariable.class::cast)
-                .collect(Collectors.toList());
+                .toList();
     }
 	/** Return the list of all names of UCQ variables registered in the map. */
     public List<String> getUcqVariablesNames() {
@@ -241,7 +241,7 @@ public class VariablesMap {
                 .map(ucqVariable -> ((UcqVariable) ucqVariable).getQuestionItemName())
                 .filter(Objects::nonNull)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 	/** Return the list of all names of MCQ variables registered in the map. */
     public List<String> getMcqVariablesNames() {
@@ -250,13 +250,13 @@ public class VariablesMap {
                 .map(mcqVariable -> ((McqVariable) mcqVariable).getQuestionItemName())
                 .filter(Objects::nonNull)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
     /** Return the list of all paper UCQ indicators registered in the map. */
     public List<PaperUcq> getPaperUcq() {
         return variables.values().stream()
                 .filter(PaperUcq.class::isInstance)
                 .map(PaperUcq.class::cast)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
